<resources>
    <string name="action_settings">Settings</string>
    <string name="action_attend">Attend</string>
    <string name="action_unattend">Cancel</string>
    <string name="action_checkin">Check In</string>
    <string name="action_checkout">Check Out</string>
    <string name="action_comment">Review</string>
    <string name="action_chat">Chat</string>
    <string name="action_like">Like</string>
    <string name="action_unlike">Unlike</string>
    <string name="age_minutes">minutes</string>
    <string name="age_hours">hours</string>
    <string name="age_days">days</string>
    <string name="alert_attend_success_title">You will attend!</string>
    <string name="alert_attend_success">You will attend this event, other users will be able to see that you are going to be here.</string>
    <string name="alert_unattend_success_title">You will not attend!</string>
    <string name="alert_unattend_success">You have been removed from the list of users who will be at this event.</string>
    <string name="alert_checkin_success_title">Checked In!</string>
    <string name="alert_checkin_success">You are now checked in, other users will be able to see that you are here. You can do a \'check out\' to stop sharing that information. If you forget to check out, you will be automatically checked out after some time.</string>
    <string name="alert_checkout_success_title">Checked Out!</string>
    <string name="alert_checkout_success">You checked out from {0}, other users can no longer see that you are here. Nobody can see that you have been here from now on.</string>
    <string name="alert_like_user_success">The user has been notified that you like him.</string>
    <string name="alert_like_place_success">You are now part of the users who like this place.</string>
    <string name="alert_like_success_title">You like!</string>
    <string name="alert_unlike_user_success">Your like has been removed.</string>
    <string name="alert_unlike_place_success">You are no longer part of the users who like this place.</string>
    <string name="alert_unlike_success_title">Like cancelled!</string>
    <string name="app_name">PELMEL</string>
    <string name="calendar.daily">Daily</string>
    <string name="calendar.repeat.first">First</string>
    <string name="calendar.repeat.second">Second</string>
    <string name="calendar.repeat.third">Third</string>
    <string name="calendar.repeat.fourth">Fourth</string>
    <string name="cancel">Cancel</string>
    <string name="chat_hint">Enter your message here</string>
    <string name="chat_info_msg">Tap on a conversation to show all messages and reply. Tap here to refresh.</string>
    <string name="chat_send">Send</string>
    <string name="chat_send_fail_title">Failed to send message</string>
    <string name="chat_send_fail">PelMel failed to send your message, please try again and check your network connection.</string>
    <string name="checkins_list_title">Check in below</string>
    <string name="counter_event_in">{0} will attend</string>
    <string name="counter_event_in_singular">{0} will attend</string>
    <string name="counter_likes">{0} Like It</string>
    <string name="counter_likes_singular">{0} Likes It</string>
    <string name="counter_arehere">{0} are here</string>
    <string name="counter_arehere_singular">{0} is here</string>
    <string name="counter_attend">{0} will attend</string>
    <string name="counter_attend_singular">{0} will attend</string>
    <string name="counter_chat">Chat</string>
    <string name="counter_comments">{0} Reviews</string>
    <string name="counter_comments_singular">{0} Review</string>
    <string name="counter_likes_user">{0} Like Him</string>
    <string name="counter_likes_user_singular">{0} Likes Him</string>
    <string name="counter_network">My Network</string>
    <string name="counter_network_accept">Respond</string>
    <string name="counter_network_add">Add</string>
    <string name="counter_network_cancel">Cancel</string>
    <string name="counter_network_friends">Friends</string>
    <string name="deal.activation.message">Activating the deal...</string>
    <string name="deal.available">Available</string>
    <string name="deal.button.problem">Report a problem</string>
    <string name="deal.button.whatsthis">What\'s this?</string>
    <string name="deal.list.title">Nearby Deals</string>
    <string name="deal.delay">Available in {0}</string>
    <string name="deal.error.alreadyUsed">Already used in past 24h</string>
    <string name="deal.error.generic">Technical error, please retry later</string>
    <string name="deal.error.quotaReached">No more deals left</string>
    <string name="deal.present">PRESENT TO BARTENDER</string>
    <string name="deal.proceed">PROCEED WITH THE DEAL</string>
    <string name="deal.quota.label">{0} left / {1} total</string>
    <string name="deal.report.error.text">We were unable to contact our servers to report your problem. You may experience network issues which might also be the cause of your problem. Please check your network and try again.</string>
    <string name="deal.report.text">Our administrators and the owner of this place have been notified of a problem and will do their best to fix it or get in touch with you. We are very sorry for the inconvenience.</string>
    <string name="deal.report.title">Problem reported!</string>
    <string name="deal.type.TWO_FOR_ONE">Buy 1 / Get 1 free</string>
    <string name="deal.use.button">USE THIS DEAL</string>
    <string name="deal.use.checkinRequiredTitle">Check In Now!</string>
    <string name="deal.use.checkinRequiredMsg">You need to check in to access this deal, do you want to check in now?</string>
    <string name="deal.use.checkinRequiredOkBtn">Check Me In</string>
    <string name="deal.use.countdown">Activation in {0}</string>
    <string name="deal.use.legal">This deal is offered by {0}, not by us.\nYou certify being of legal age to use this deal</string>
    <string name="disconnect">Disconnect</string>
    <string name="distance.feet">{0} feet</string>
    <string name="distance.miles">{0} miles</string>
    <string name="distance.meters">{0} meters</string>
    <string name="distance.kilometers">{0} km</string>
    <string name="event_place_title">Takes place at</string>
    <string name="event_type_happyhour">HAPPY HOUR</string>
    <string name="event_type_opening">OPENING TIME</string>
    <string name="event_type_themenight">THEME NIGHT</string>
    <string name="eventType">Event</string>
    <string name="googlePlay.SERVICE_MISSING">You need to install Google Play Services from the Google Play Store</string>
    <string name="googlePlay.SERVICE_VERSION_UPDATE_REQUIRED">You need to update Google Play Services from the Google Play Store</string>
    <string name="googleServicesUnavailable">You need to update or install Google Play Services</string>
    <string name="hours_open">OPEN</string>
    <string name="hours_open_in">Opens in {0}</string>
    <string name="hours_open_leftHours">{0} left</string>
    <string name="hours_closed">CLOSED</string>
    <string name="insiders_title">They were in</string>
    <string name="intro_1">Find the gay community</string>
    <string name="intro_2">Find where everybody is</string>
    <string name="intro_3">Check in and get deals</string>
    <string name="loadingWaitMsg">Loading&#8230;</string>
    <string name="likers_title">They like</string>
    <string name="liked_places_title">He goes to</string>
    <string name="liked_users_title">He likes</string>
    <string name="locationProviderUnavailable">Cannot get your position, you may need to activate location services.</string>
    <string name="loginIntroLabel">LOG IN</string>
    <string name="loginWaitMsg">Logging in&#8230;</string>
    <string name="loginButtonLabel">Login</string>
    <string name="loginEmailPlaceholder">E-mail address</string>
    <string name="loginPasswordPlaceholder">Password</string>
    <string name="loginPasswordConfirmPlaceholder">Confirm password</string>
    <string name="loginHint">Login to find all places around you</string>
    <string name="logout">Logout</string>
    <string name="messaging.title.groupChat">Group chat</string>
    <string name="messaging.chatUsers">Recipients</string>
    <string name="month.january">January</string>
    <string name="month.february">February</string>
    <string name="month.march">March</string>
    <string name="month.april">April</string>
    <string name="month.may">May</string>
    <string name="month.june">June</string>
    <string name="month.july">July</string>
    <string name="month.august">August</string>
    <string name="month.september">September</string>
    <string name="month.october">October</string>
    <string name="month.november">November</string>
    <string name="month.december">December</string>
    <string name="msg.failTitle">Error</string>
    <string name="msg.fail">A problem occurred while trying to contact our server. Please check your connection and try again.</string>
    <string name="msg.wait">Please wait&#8230;</string>
    <string name="network.action.groupChat">Group Chat</string>
    <string name="network.action.add">Add a friend</string>
    <string name="network.action.respond.actionSheetTitle">Respond to invite</string>
    <string name="network.action.respond.accept">Accept</string>
    <string name="network.action.respond.decline">Decline</string>
    <string name="network.checkins.noNetworkMessage">Nobody is in your network yet.\nBuild your network by adding nearby friends</string>
    <string name="network.checkins.noCheckinMessage">No check-in in your network now.\nInvite your network to meet somewhere!</string>
    <string name="network.checkins.startChat">Start a group chat</string>
    <string name="network.checkins.addToNetwork">Build my network</string>
    <string name="network.confirm.cancel">This will cancel the connection you have with this user. To re-establish it you will have to send him a new request. Are you sure you want to remove this user from your network?</string>
    <string name="network.confirm.request">This will send an invite that this user will have to accept. You will then be able to group chat with him, invite him to events, and see where he is if he\'s checked in.\nDo you want to send a request now?</string>
    <string name="network.confirm.title">Confirm action</string>
    <string name="network.section.network">Your network</string>
    <string name="network.section.pendingApproval">Awaiting your approval</string>
    <string name="network.section.pendingRequest">Requests sent</string>
    <string name="network.tab.network">Network</string>
    <string name="network.tab.checkins">Check-ins</string>
    <string name="ok">OK</string>
    <string name="offline">Offline</string>
    <string name="online">Available</string>
    <string name="placeType.bar">Bar</string>
    <string name="placeType.sauna">Bathhouse</string>
    <string name="placeType.restaurant">Restaurant</string>
    <string name="placeType.club">Club</string>
    <string name="profileName">Nickname</string>
    <string name="profileBirthday">Birth date</string>
    <string name="profileHeight">Height : </string>
    <string name="profileHeightVal">167 cm / 5\'6\'\'</string>
    <string name="profileWeight">Weight : </string>
    <string name="profileWeightVal">72 kg / 160 lbs</string>
    <string name="profileDescriptionLabel">Description</string>
    <string name="profileTags">Define yourself</string>
    <string name="registerButtonLabel">Register</string>
    <string name="registerIntroHint">Register freely in one click by filling this 4 fields</string>
    <string name="registerPseudoHint">Nickname</string>
    <string name="registerTermsHint">By registering you agree to our terms of use. Click here to read them.</string>
    <string name="tapToEdit">Tap to edit</string>
    <string name="login_forgot_password">Forgot your password?</string>
</resources>