<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:background="@drawable/intro_bg_3">
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:padding="5dip" >
 
    <!--  ListRow Left sied Thumbnail image -->
 
    <!-- Title Of Song-->
 
    <!-- Artist Name -->
 
    <!-- Rightend Duration -->
 
     <!-- Rightend Arrow -->


    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo_big" />



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/logoImage"
        android:id="@+id/loginContainer"
         >

        <TextView
            android:id="@+id/loginIntroLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/loginHint"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/login_padding" >

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/loginEmailPlaceholder"
                android:inputType="textEmailAddress"
                android:padding="7dp"
                android:background="@drawable/bg_chat_text">

                <requestFocus />
            </EditText>

        </LinearLayout>

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/loginPasswordPlaceholder"
            android:inputType="textPassword"
            android:layout_marginTop="4dp"
            android:padding="7dp"
            android:background="@drawable/bg_chat_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <TextView
                android:id="@+id/loggingHint"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="@dimen/login_button_width"
                android:layout_height="wrap_content"
                android:text="@string/loginButtonLabel"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_login_button"/>

        </LinearLayout>
        <TextView
            android:id="@+id/forgotPassword"
            android:layout_gravity="right"
            android:textColor="@color/white"
            android:padding="10dp"
            android:text="@string/login_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
 
</RelativeLayout>
</ScrollView>
</RelativeLayout>